package vvp_company.planetservice;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class PlanetServiceApplication {

    public static void main(String[] args) {
        SpringApplication.run(PlanetServiceApplication.class, args);
    }

}
