package vvp_company.planetservice.dto;

import lombok.Data;

@Data
public class CreatePlanetRequest {
    private String name;
}
